--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "~0.16.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "font-awesome": "^4.7.0",
+    "lodash.shuffle": "^4.2.0",
+    "radium": "^0.26.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-flipcard-2": "^0.3.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-flip-card": "^1.0.6",
+    "react-native-web": "0.17.7",
+    "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
